--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -11,6 +11,8 @@
         android:padding="4dp"
         android:clipToPadding="false"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item"
+        android:scrollbars="vertical"/>
 
 </RelativeLayout>
