--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp">
@@ -10,17 +10,17 @@
         android:padding="8dp">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageDrapeau"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="5dp"
-            android:src="@drawable/ic_android" />
+             />
 
         <TextView
             android:id="@id/text_view_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/imageView"
+            android:layout_toEndOf="@+id/imageDrapeau"
             android:text="Line 1"
             android:textColor="@android:color/black"
             android:textSize="18sp"
@@ -31,10 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_view_1"
-            android:layout_toEndOf="@id/imageView"
+            android:layout_toEndOf="@id/imageDrapeau"
             android:text="Line 2"></TextView>
 
     </RelativeLayout>
 
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
