--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/password_input_layout">
+        app:layout_constraintBottom_toTopOf="@id/login_button">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_edit"
@@ -26,24 +26,7 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_input_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_input_layout"
-        app:layout_constraintBottom_toTopOf="@+id/login_button">        >
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password_edit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_button"
@@ -54,7 +37,7 @@
         app:layout_constraintBottom_toTopOf="@id/create_account_button"
         app:layout_constraintLeft_toLeftOf="@id/create_account_button"
         app:layout_constraintRight_toRightOf="@id/create_account_button"
-        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
+        app:layout_constraintTop_toBottomOf="@id/login_input_layout"
         />
 
     <com.google.android.material.button.MaterialButton
